integration_tests/codegen_fail/fail/object/derive_no_fields.rs
#[derive(juniper::GraphQLObject)]
struct Object {}

fn main() {}
