integration_tests/codegen_fail/fail/object/derive_no_fields.stderr
error: GraphQL object must have at least one field
 --> $DIR/derive_no_fields.rs:2:1
  |
2 | struct Object {}
  | ^^^^^^^^^^^^^^^^
  |
  = note: https://spec.graphql.org/June2018/#sec-Objects
